# c-practice

./: README.md
algosort/: CMakeLists.txt  test.c
algosort/include/: algosort.h
algosort/src/: merge_sort.c  quick_sort.c
algostr/: .gitignore  CMakeLists.txt
algostr/rotatestr/include/: rotatestr.h
algostr/rotatestr/src/: n_pass_rotate.txt  rotatestr.c
algostr/test/: CMakeLists.txt  test.c
bitmap/: .gitignore  CMakeLists.txt  Readme.md  bitmap.c  bitmap.h  fourbitmap.c  memory.c  memory.h  test.c
bitmap/initarray/: CMakeLists.txt
bitmap/initarray/include/: initarray.h
bitmap/initarray/src/: initarray.c
bitmap/memoryusage/: CMakeLists.txt
bitmap/memoryusage/include/: memoryusage.h
bitmap/memoryusage/src/: memory.c
bitmap/multibit/: CMakeLists.txt
bitmap/multibit/include/: fourbitmap.h
bitmap/multibit/src/: fourbitmap.c
bitmap/singlebit/: CMakeLists.txt
bitmap/singlebit/include/: bitmap.h
bitmap/singlebit/src/: bitmap.c
bitmap/sortfile/: CMakeLists.txt  dup_sortfile.c  init_array.c  n_pass_sort.c  sortfile.c  test.c  test_memory.c
hashmap/: CMakeLists.txt  README.md
hashmap/lib/: CMakeLists.txt
hashmap/lib/include/: hashmap.h
hashmap/lib/src/: hashmap.c
hashmap/test/: CMakeLists.txt  test_hashmap.c
linkedlist/: CMakeLists.txt  README.md
linkedlist/lib/: CMakeLists.txt
linkedlist/lib/include/: list.h  slist.h
linkedlist/lib/src/: list.c  slist.c
linkedlist/test/: CMakeLists.txt  test.c  test_slist.c
linklist/: CMakeLists.txt  README.md
linklist/lib/include/: list.h  slist.h
linklist/lib/src/: slist.c
sortfile/: .gitignore  CMakeLists.txt  gen_int.c  main.c  n_pass_sort.c  test_memory.c
stralgo/: CMakeLists.txt
stralgo/rotatestr/: CMakeLists.txt
tcpl/: CMakeLists.txt
tcpl/caculator/: CMakeLists.txt  main.c
tcpl/getline/: CMakeLists.txt
tcpl/getline/include/: getline.h
tcpl/getline/src/: getline.c
tcpl/stack/: CMakeLists.txt
tcpl/stack/include/: getop.h  stack.h
tcpl/stack/src/: getop.c  stack.c
tcpl/test/: CMakeLists.txt  test.c
treemap/: .gitignore  CMakeLists.txt  README.md
treemap/lib/: CMakeLists.txt
treemap/lib/include/: treemap.h
treemap/lib/src/: treemap.c
treemap/test/: CMakeLists.txt  test_treemap.c
vector/: CMakeLists.txt  README.md  Reademe.md
vector/lib/: CMakeLists.txt
vector/lib/include/: vector.h
vector/lib/src/: vector.c
vector/test/: CMakeLists.txt  test.c
